# football-league-ms-v2

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  main.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_s3_storage_keys.py  0002_users.py  0003_phase8_rbac_models.py  0004_member_type_and_club_staff.py  0005_user_governance_roles.py  0006_club_new_fields.py  0007_season_club_membership.py  0008_season_auto_status.py  0009_club_cover_photo.py
app/: config.py  db.py  dependencies.py
app/dependencies/: __init__.py  roles.py
app/middleware/: logging.py  request_id.py
app/models/: __init__.py  audit_log.py  club.py  club_membership.py  club_season.py  league.py  league_info.py  notification.py  player.py  registration.py  release.py  season.py  user.py  user_governance_role.py
app/routers/: audit_logs.py  auth.py  club_memberships.py  club_season_profiles.py  club_staff.py  club_unlock_requests.py  clubs.py  league_info.py  leagues.py  notifications.py  players.py  registration_requests.py  releases.py  reports.py  seasons.py  users.py
app/schemas/: club.py  club_membership.py  club_season.py  league.py  league_info.py  notification.py  player.py  registration.py  release.py  season.py  user.py
app/services/: audit_service.py  club_membership_service.py  club_season_service.py  club_service.py  cognito.py  events.py  league_service.py  notification_service.py  player_service.py  registration_service.py  release_service.py  report_service.py  role_checks.py  season_service.py  storage.py  user_service.py  user_sync.py
frontend/: .env.local.example  middleware.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  vercel.json
frontend/app/: globals.css  layout.tsx
frontend/app/(auth)/login/: page.tsx
frontend/app/(dashboard)/: page.tsx
frontend/app/(dashboard)/_components/: DashboardHome.tsx
frontend/app/(dashboard)/audit-logs/: page.tsx
frontend/app/(dashboard)/clubs/: page.tsx
frontend/app/(dashboard)/notifications/: page.tsx
frontend/app/(dashboard)/password/: page.tsx
frontend/app/(dashboard)/releases/: page.tsx
frontend/app/(dashboard)/seasons/: page.tsx
frontend/app/(dashboard)/staff/: page.tsx
frontend/app/(dashboard)/unlock-requests/: page.tsx
frontend/app/api/auth/complete-challenge/: route.ts
frontend/app/api/auth/login/: route.ts
frontend/app/api/auth/logout/: route.ts
frontend/app/api/auth/me/: route.ts
frontend/app/api/proxy/: route.ts
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/app/dashboard/_components/: DashboardHome.tsx
frontend/app/dashboard/analytics/: page.tsx
frontend/app/dashboard/club-memberships/: page.tsx
frontend/app/dashboard/clubs/: page.tsx
frontend/app/dashboard/clubs/[id]/: page.tsx
frontend/app/dashboard/league-info/: page.tsx
frontend/app/dashboard/players/: page.tsx
frontend/app/dashboard/players/[id]/: page.tsx
frontend/app/dashboard/profile/: page.tsx
frontend/app/dashboard/registrations/: page.tsx
frontend/app/dashboard/releases/: page.tsx
frontend/app/dashboard/reports/: page.tsx
frontend/app/dashboard/seasons/: page.tsx
frontend/app/dashboard/submissions/: page.tsx
frontend/app/dashboard/users/: page.tsx
frontend/app/dashboard/users/[id]/: page.tsx
frontend/app/login/: page.tsx
frontend/app/login/_components/: LoginClient.tsx
frontend/components/shared/: DataTable.tsx  ImageLightbox.tsx  MobileNav.tsx  QueryProvider.tsx  Sidebar.tsx  StatusBadge.tsx  Topbar.tsx
frontend/components/ui/: button.tsx  card.tsx  sonner.tsx  table.tsx
frontend/hooks/: useCurrentUser.ts
frontend/lib/: api.ts  auth.ts  utils.ts
frontend/types/: index.ts
infra/: app.py  cdk.json  cloudwatch_agent_config.json  football_league_stack.py  requirements.txt  user_data.sh
infra/lambda/: notification_handler.py
scripts/: seed_demo_data.py
tests/: conftest.py  test_auth.py  test_clubs.py  test_events.py  test_lambda.py  test_lambda_handler.py  test_leagues.py  test_logging_safety.py  test_metrics.py  test_middleware.py  test_observability_integration.py  test_rbac.py  test_registration.py  test_releases.py  test_storage.py
