[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "football-league-ms"
version = "0.1.0"
description = "Football league management system"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "gunicorn>=22.0.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "pydantic>=2.0.0",
    "pydantic[email]>=2.0.0",
    "pydantic-settings>=2.0.0",
    "alembic>=1.13.0",
    # Phase 4 — S3 pre-signed URLs and object management; Phase 5 — SQS
    "boto3>=1.34.0",
    # PyJWT (not python-jwt) — must use the [cryptography] extra for RSA key parsing.
    # python-jwt is a completely different package; if it gets installed it shadows
    # PyJWT's jwt module and breaks RSAAlgorithm imports. Pin to avoid the conflict.
    "PyJWT[cryptography]>=2.8.0,<3.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.15.0",
    "mypy>=2.0.0",
    "pre-commit>=3.7.0",
    # test_auth.py builds RSA key pairs to sign test JWTs.
    # Declared explicitly here because PyJWT[cryptography]'s extra is not always
    # resolved when the base PyJWT wheel is already cached in pip's download cache.
    "cryptography>=41.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

# ---------------------------------------------------------------------------
# Ruff — linter and formatter
# Replaces: black (formatter) + isort (imports) + flake8 (linter)
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 88        # PEP 8 recommends 79; 88 is black's default and widely accepted
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors  — spacing, colons, blank lines (PEP 8 §Whitespace)
    "W",   # pycodestyle warnings
    "F",   # pyflakes            — unused imports, undefined names (PEP 8 §Imports)
    "I",   # isort               — stdlib → third-party → local (PEP 8 §Imports)
    "N",   # pep8-naming         — snake_case functions, PascalCase classes (PEP 8 §Naming)
    "B",   # flake8-bugbear      — common bug-prone patterns
    "UP",  # pyupgrade           — use modern Python syntax
]
ignore = [
    "B008",  # FastAPI's Depends() in default arguments is the intended pattern, not a bug
]

[tool.ruff.lint.isort]
known-first-party = ["app"]   # tells ruff that "app" is our code, not a third-party lib

[tool.ruff.format]
quote-style = "double"        # PEP 8 has no strong opinion; double quotes is the team standard

# ---------------------------------------------------------------------------
# mypy — static type checker
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = true   # every function must have type annotations
warn_return_any = true         # warn if a function returns Any (a type-checking escape hatch)
warn_unused_configs = true
ignore_missing_imports = true  # don't fail on third-party libs with no stubs
plugins = ["sqlalchemy.ext.mypy.plugin"]  # teaches mypy how SQLAlchemy ORM types work
# alembic/ uses runtime-injected op/context objects mypy can't see statically.
# infra/ is CDK code whose library types aren't in the app venv.
exclude = ["alembic/", "infra/"]

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
